# for display continuity sake please use 2 spaces instead of tabs
2015-11-19 bertazza <bertazza@gmail.com>
  * Raster styler: added options to save and load symbology as SLD file, 
  added option to invert ramp for stretched symbology, added given interval
  classification method, added some more default symbologies, fixed some bugs
  * esri Floating Point grid header writer: bug fixed
  * RasterImageLayer: fixed few bugs related to overall and single cell
  transparency

2015-11-13 Giuseppe Arta  <giuseppe_aruta@yahoo.it>
  * Added Measure Toolbox Extension version 11 to OpenJUMP Plus
    Documentation is available here: http://sourceforge.net/projects/opensit
    /files/Openjump/PlugIn/MeasureExtension/Measure%20toolbox_11.pdf/download
  
2015-10-18 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * workaround for OpenJUMP bug 410 (Sextante), If nodata value is -3.40282346639E38
  and min value -9999, -99999 or 1.70141E38. Those two values are displayed in red
  on DEMStatistic table

2015-10-18 mmichaud <m.michael.michaud@orange.fr>
  * Small fix in BeanshellAttributeCalculatorPlugIn
  * DatastoreDataSource now present tables in alphabetical order

2015-10-07 bertazza
  * Fixed bug when reading esri ASCII grid with .txt extension

2015-10-06 bertazza
  * Fixed bug when reading ASCII grid cell value
  
2015-10-05 bertazza
  * Added "TXT" among the accepted extensions for raster loader.

2015-09-20 ede
  * fix "WFS plugin does not set Content-Type for GetFeature"

2015-09-15 mmichaud <m.michael.michaud@orange.fr>
  * add Date in XmlBinder to be able to persist Dates in a project file

2015-08-29 mmichaud <m.michael.michaud@orange.fr>
  * fix #408 bug about ColorThemingStyle

2015-07-13 mmichaud <m.michael.michaud@orange.fr>
  * Improve ColorThemingStyle : can now set transparency and lineWidth
    globally or individually in ColorThemingPanel

2015-07-12 mmichaud <m.michael.michaud@orange.fr>
  * improve .cpg handling for shapefile/dbf format